# stonkfish

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
bitboard/: bitboard.go  bitboard_test.go
crates/chess/: Cargo.toml
crates/chess/src/: bitboard.rs  lib.rs  position.rs  types.rs  variant.rs
crates/chesscore/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  moves.rs  perft.rs  piece.rs
crates/core/src/board/: bitboard.rs  dims.rs  mod.rs  square.rs
crates/core/src/movegen/: attack_table.rs  generator.rs  mod.rs  patterns.rs  standard.rs
crates/core/src/position/: fen.rs  mod.rs  position.rs
crates/engine/: Cargo.toml
crates/engine/src/: bitboard.rs  lib.rs
crates/engine/src/position/: mod.rs  piece.rs  piece_collection.rs
crates/server/src/: main.rs  models.rs  state.rs
crates/v1/chesscore/: Cargo.toml
crates/v1/core/: Cargo.toml
crates/v1/core/src/: lib.rs  types.rs
crates/v1/core/src/bitboard/: mod.rs
crates/v1/core/src/board/: mod.rs  moves.rs  position.rs
crates/v1/core/src/movegen/: mod.rs
crates/v1/core/src/variant/: mod.rs  standard.rs
crates/v1/engine/: Cargo.toml
crates/v1/engine/src/: lib.rs  main.rs  transposition.rs  utils.rs
crates/v1/engine/src/evaluation/: mod.rs  piece_sq.rs
crates/v1/engine/src/move_generation/: att_table.rs  mod.rs  moves.rs
crates/v1/engine/src/position/: fen.rs  zobrist.rs
crates/v1/server/: Cargo.toml
crates/v1/server/src/: auth.rs  client.rs  main.rs  models.rs  state.rs  ws.rs
crates/variant/: Cargo.toml
crates/variant/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
move_generator/: move_generator.go
position/: piece.go  position.go  position_test.go
src/: engine.rs  lib.rs  main.rs
src/chesscore/: mod.rs  position.rs
src/engine/: bitboard.rs  mod.rs  moves.rs  stats.rs  transposition.rs  utils.rs
src/engine/evaluation/: mod.rs  piece_sq.rs
src/engine/evaluator/: mod.rs
src/engine/move_generation/: att_table.rs  mod.rs  moves.rs
src/engine/move_generator/: mod.rs  move_mask.rs  moves.rs
src/engine/position/: fen.rs  mod.rs  piece.rs  piece_collection.rs  zobrist.rs
src/engine/search/: mod.rs  transposition.rs
src/evaluator/: mod.rs
src/game/: mod.rs  moves.rs
src/game/evaluator/: mod.rs
src/position/: mod.rs
src/test-data/: ply-10:draft:8.txt
src/utils/: bitboard.rs  mod.rs
stonkfish-wasm/: .gitignore  Cargo.toml
stonkfish-wasm/src/: lib.rs
test-data/: ply-10:draft-9.txt
