[package]
name = "stonkfish"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
numext-fixed-uint = "0.1.6"
instant = { version = "0.1", features = [ "now" ] }
arrayvec="0.7.2"
rand="0.8.5"
clap="4.2.4"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = {version = "1.0.48"}