[package]
name = "stonkfish-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
stonkfish = {path = "../"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

