[package]
name = "stonkfish-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = { version = "1.0", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
stonkfish = { path = "../", features = ["wasm-bindgen"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde-wasm-bindgen = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"