[package]
name = "sf-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[features]
default = ["console_error_panic_hook"]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
chesscore = { path = "../chesscore" }
numext-fixed-uint = "0.1.6"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.63"
instant = { version = "0.1", features = [ "now" ] }
arrayvec="0.7.2"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = { version = "1.0", optional = true }
rand="0.8.5"
clap="4.2.4"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = {version = "1.0.48"}
log = { version="0.4", features=["std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde-wasm-bindgen = "0.4.5"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
